# lax

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs-pr.yml  docs.yml
docs/: _github_slugs.py  api.rst  conf.py  design.md  examples.rst  index.rst  notebooks
docs/_static/: custom.css
examples/: alpha_pb_demo.ipynb  descouvemont_closed_channels_demo.ipynb  descouvemont_np_demo.ipynb  descouvemont_o16_ca44_demo.ipynb  energy_dependent_demo.ipynb  fourier_demo.ipynb  hydrogen_demo.ipynb  yamaguchi_demo.ipynb
examples/.ipynb_checkpoints/: fourier_demo-checkpoint.ipynb  hydrogen_demo-checkpoint.ipynb  yamaguchi_demo-checkpoint.ipynb
prototype/: rmatrix.py  test_yamaguchi.py
src/lax/: __init__.py  _angular.py  _descouvemont_utils.py  compile.py  constants.py  propagate.py  types.py  wavefunction.py
src/lax/boundary/: __init__.py  _types.py  coulomb.py
src/lax/meshes/: __init__.py  _basis_eval.py  _registry.py  _utils.py  laguerre.py  legendre.py
src/lax/models/: __init__.py  optical.py  presets.py  reid.py
src/lax/operators/: __init__.py  interaction.py  potential.py
src/lax/solvers/: __init__.py  assembly.py  linear_solve.py  observables.py  spectrum.py
src/lax/spectral/: __init__.py  interpolation.py  matching.py  observables.py  types.py
src/lax/transforms/: __init__.py  bilinear.py  fourier.py  grid.py  integration.py
tests/: conftest.py
tests/acceptance/: generate_dwba_reference.py  test_dwba_reference.py
tests/acceptance/data/: dwba_pn_reference.npz
tests/benchmarks/: __init__.py  _descouvemont_cases.py  _descouvemont_fixtures.py  _reference_cases.py  test_alpha_pb_optical.py  test_blocks_partial_waves.py  test_coupled_closed_channel.py  test_descouvemont_closed_channels.py  test_descouvemont_np.py  test_descouvemont_o16_ca44.py  test_examples_notebooks.py  test_hydrogen.py  test_phase8_meshes.py  test_yamaguchi.py  test_yamaguchi_fourier.py
tests/benchmarks/data/: descouvemont_alpha_c12.json  descouvemont_np_j1.json  descouvemont_o16_ca44.json
tests/property/: test_autograd.py  test_hermiticity.py  test_unitarity.py
tests/unit/: _blocks_helpers.py  test_angular.py  test_assembly_arrays.py  test_blocks_boundary.py  test_blocks_builders.py  test_blocks_direct.py  test_blocks_spectral.py  test_blocks_transforms.py  test_boundary.py  test_compile_dtype_device.py  test_energy_dependent_flow.py  test_interaction_block_axis.py  test_interaction_builders.py  test_mass_factor_regimes.py  test_matrix_element.py  test_mesh_integration.py  test_mesh_laguerre.py  test_mesh_legendre.py  test_solver_direct.py  test_solver_pickle.py  test_solver_spectrum.py  test_spectral.py  test_spectral_interpolation.py  test_transforms_fourier.py  test_transforms_grid.py  test_wavefunction_grid.py
